# Flip7RL

./: .gitignore  README.md  demo.py  pyproject.toml
flip7/: __init__.py
flip7/analysis/: __init__.py
flip7/engine/: __init__.py  cards.py  deck.py  game.py  state.py
flip7/players/: __init__.py  base.py  heuristic.py  human.py  rule_based.py
flip7/rl/: __init__.py
flip7/simulation/: __init__.py  logger.py  runner.py  stats.py
flip7/ui/: __init__.py  replay.py
tests/: conftest.py  test_deck_builder.py
tests/engine/: test_action_cards.py  test_cards.py  test_deck.py  test_integration.py  test_state.py
tests/players/: test_heuristic.py  test_observation.py  test_rule_based.py
tests/simulation/: test_logger.py  test_runner.py  test_stats.py
